package classadpter_standard

// 适配接口
type Target interface {
	Request()
}
