@startuml
'https://plantuml.com/class-diagram

interface Target {
+Request()
}

class Adaptee {
+Adaptee NewAdaptee()
+SpecificRequest()
}

class ObjectAdaptee {
-adapte: Adaptee
+ObjectAdaptee NewObjectAdapter(Adaptee)
+Request()
}

class Client {
+main()
}

Target <|.. ObjectAdaptee
ObjectAdaptee *-- Adaptee
Client <.. Target

@enduml
